<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".ui.Options">

    <ImageView
        android:id="@+id/select_board_size"
        android:layout_width="359dp"
        android:layout_height="40dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/select_board_size_2"
        app:layout_constraintBottom_toTopOf="@+id/select_no_of_tp"
        app:layout_constraintEnd_toStartOf="@+id/board_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/select_board_size" />

    <ImageView
        android:id="@+id/select_no_of_tp"
        android:layout_width="416dp"
        android:layout_height="51dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/select_no_of_tp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_board_size"
        app:srcCompat="@drawable/select_no_of_tp_" />

    <ImageView
        android:id="@+id/options_title"
        android:layout_width="244dp"
        android:layout_height="85dp"
        android:layout_marginStart="243dp"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/options_title"
        app:layout_constraintBottom_toTopOf="@+id/select_board_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/options_button" />

    <RadioGroup
        android:id="@+id/board_size"
        android:layout_width="144dp"
        android:layout_height="138dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="36dp"
        android:background="#F3EDED"
        android:backgroundTint="#F3EEEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/options_title"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/showTP"
        android:layout_width="136dp"
        android:layout_height="120dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="47dp"
        android:background="#F6F5F5"
        android:backgroundTint="#F4EFEF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_size" />

</androidx.constraintlayout.widget.ConstraintLayout>